--- a/src/Name.css
+++ b/src/Name.css
@@ -20,11 +20,14 @@
         rgb(21, 255, 0), rgb(98, 0, 255), rgb(204, 0, 255));
     mix-blend-mode: color;    
     pointer-events: none;
-
+    transform: translateZ(0);
 }
 
 video{
     object-fit: cover;
+    /* width: 100%; */
+    /* justify-content: center;
+    align-items: center; */
 }
 
 .nameStyle {
@@ -65,6 +68,94 @@ h1 span {
     display: inline-block;
     animation: animate 2s linear forwards;
 }
+
+
+@keyframes animate{
+    0% {opacity: 0;
+        transform: rotateY(90deg);
+        /* filter: blur(10px) */
+        /* box-shadow: 0px 0px 0px; */
+    }
+    100% {opacity: 4;
+        transform: rotateY(0deg);
+        /* filter: blur(0px) */
+    }
+}
+
+.sloganStyle {
+    opacity: 0;
+    display: inline-block;
+    animation: animate 3.8s linear forwards;
+}
+
+h1 span:nth-child(1)
+    {
+        animation-delay: 0.5s;
+    }
+h1 span:nth-child(2)
+    {
+        animation-delay: 0.6s;
+    }
+h1 span:nth-child(3)
+    {
+        animation-delay: 0.7s;
+    }
+h1 span:nth-child(4)
+    {
+        animation-delay: 0.8s;
+    }
+h1 span:nth-child(5)
+    {
+        animation-delay: 0.9s;
+    }
+h1 span:nth-child(6)
+    {
+        animation-delay: 1s;
+    }
+h1 span:nth-child(7)
+    {
+        animation-delay: 1.2s;
+    }
+h1 span:nth-child(8)
+    {
+        animation-delay: 1.4s;
+    }
+h1 span:nth-child(9)
+    {
+        animation-delay: 1.6s;
+    }
+h1 span:nth-child(10)
+    {
+        animation-delay: 1.8s;
+    }
+h1 span:nth-child(11)
+    {
+        animation-delay: 2s;
+    }
+h1 span:nth-child(12)
+    {
+        animation-delay: 2.2s;
+    }
+h1 span:nth-child(13)
+    {
+        animation-delay: 2.4s;
+    }
+h1 span:nth-child(14)
+    {
+        animation-delay: 2.6s;
+    }
+h1 span:nth-child(15)
+    {
+        animation-delay: 2.8s;
+    }
+h1 span:nth-child(16)
+    {
+        animation-delay: 2.9s;
+    }
+h1 span:nth-child(17)
+    {
+        animation-delay: 3s;
+    }
 
 @media (max-width: 1024px){
     .nameStyle {
@@ -259,89 +350,3 @@ h1 span {
         width: 90%;
     }   
     }
-
-@keyframes animate{
-    0% {opacity: 0;
-        transform: rotateY(90deg);
-        filter: blur(10px)
-    }
-    100% {opacity: 2;
-        transform: rotateY(0deg);
-        filter: blur(0px)
-    }
-}
-
-.sloganStyle {
-    opacity: 0;
-    display: inline-block;
-    animation: animate 3.8s linear forwards;
-}
-
-h1 span:nth-child(1)
-{
-    animation-delay: 0.5s;
-}
-h1 span:nth-child(2)
-{
-    animation-delay: 0.6s;
-}
-h1 span:nth-child(3)
-{
-    animation-delay: 0.7s;
-}
-h1 span:nth-child(4)
-{
-    animation-delay: 0.8s;
-}
-h1 span:nth-child(5)
-{
-    animation-delay: 0.9s;
-}
-h1 span:nth-child(6)
-{
-    animation-delay: 1s;
-}
-h1 span:nth-child(7)
-{
-    animation-delay: 1.2s;
-}
-h1 span:nth-child(8)
-{
-    animation-delay: 1.4s;
-}
-h1 span:nth-child(9)
-{
-    animation-delay: 1.6s;
-}
-h1 span:nth-child(10)
-{
-    animation-delay: 1.8s;
-}
-h1 span:nth-child(11)
-{
-    animation-delay: 2s;
-}
-h1 span:nth-child(12)
-{
-    animation-delay: 2.2s;
-}
-h1 span:nth-child(13)
-{
-    animation-delay: 2.4s;
-}
-h1 span:nth-child(14)
-{
-    animation-delay: 2.6s;
-}
-h1 span:nth-child(15)
-{
-    animation-delay: 2.8s;
-}
-h1 span:nth-child(16)
-{
-    animation-delay: 3s;
-}
-h1 span:nth-child(17)
-{
-    animation-delay: 3.2s;
-}
