--- a/src/Name.css
+++ b/src/Name.css
@@ -1,6 +1,6 @@
 .banner{
     margin: 0%;
-    height: 101vh;
+    height: 100vh;
     background: #000;
     justify-content: center;
     display: flex;
@@ -21,6 +21,11 @@
     mix-blend-mode: color;    
     pointer-events: none;
     transform: translateZ(0);
+}
+
+@import url('https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap" rel="stylesheet');
+.font-Text{
+    font-family: 'Do Hyeon', sans-serif;
 }
 
 video{
@@ -73,12 +78,12 @@ h1 span {
 @keyframes animate{
     0% {opacity: 0;
         transform: rotateY(90deg);
-        /* filter: blur(10px) */
-        /* box-shadow: 0px 0px 0px; */
+        filter: blur(10px);
+        box-shadow: 0px 0px 0px; 
     }
     100% {opacity: 4;
         transform: rotateY(0deg);
-        /* filter: blur(0px) */
+        filter: blur(0px)
     }
 }
 
@@ -90,7 +95,7 @@ h1 span {
 
 h1 span:nth-child(1)
     {
-        animation-delay: 0.5s;
+        animation-delay: 0.4s;
     }
 h1 span:nth-child(2)
     {
@@ -98,63 +103,63 @@ h1 span:nth-child(2)
     }
 h1 span:nth-child(3)
     {
-        animation-delay: 0.7s;
+        animation-delay: 0.8s;
     }
 h1 span:nth-child(4)
     {
-        animation-delay: 0.8s;
+        animation-delay: 1s;
     }
 h1 span:nth-child(5)
     {
-        animation-delay: 0.9s;
+        animation-delay: 1.2s;
     }
 h1 span:nth-child(6)
     {
-        animation-delay: 1s;
+        animation-delay: 1.4s;
     }
 h1 span:nth-child(7)
     {
-        animation-delay: 1.2s;
+        animation-delay: 1.6s;
     }
 h1 span:nth-child(8)
     {
-        animation-delay: 1.4s;
+        animation-delay: 1.8s;
     }
 h1 span:nth-child(9)
     {
-        animation-delay: 1.6s;
+        animation-delay: 2s;
     }
 h1 span:nth-child(10)
     {
-        animation-delay: 1.8s;
+        animation-delay: 2s;
     }
 h1 span:nth-child(11)
     {
-        animation-delay: 2s;
+        animation-delay: 2.5s;
     }
 h1 span:nth-child(12)
     {
-        animation-delay: 2.2s;
+        animation-delay: 3s;
     }
 h1 span:nth-child(13)
     {
-        animation-delay: 2.4s;
+        animation-delay: 3.5s;
     }
 h1 span:nth-child(14)
     {
-        animation-delay: 2.6s;
+        animation-delay: 4s;
     }
 h1 span:nth-child(15)
     {
-        animation-delay: 2.8s;
+        animation-delay: 4s;
     }
 h1 span:nth-child(16)
     {
-        animation-delay: 2.9s;
+        animation-delay: 4.5s;
     }
 h1 span:nth-child(17)
     {
-        animation-delay: 3s;
+        animation-delay: 4.5s;
     }
 
 @media (max-width: 1024px){
