Add style in section of Contact, and change all background color for black, and change capital letter on tittles.

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -5,7 +5,8 @@
 .slidPro{
   margin: 0%;
   height: 90vh;   
-  background: #110f0f; 
+  background: black;
+  /* background: #110f0f;  */
 }
 
 .slidPro ul{
