--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -3,7 +3,8 @@
   display: flex;
   margin: 0%;
   height: 80vh;
-  background: #212121;
+  /* background: #23242a; */
+  background: black;
 }
 
 .box{
@@ -33,7 +34,8 @@
   padding: 1.25rem;
   box-sizing: border-box;
   transition: 0.5s;
-  background: #262626;
+  /* background: #262626; */
+  background: #23242a;
   z-index: 3;
   overflow: hidden;
 }
@@ -52,7 +54,8 @@
   left:-110%;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, .1);
+  /* background: rgba(255, 255, 255, .1); */
+  background:rgba(0, 0, 0, 0.1);
   pointer-events: none;
   transition: 0.5s;
   transform: skewX(-5deg);
