--- a/src/cv.css
+++ b/src/cv.css
@@ -1,7 +1,7 @@
 .curricula{
     /* background: #23242a;  */
-    background: black;
-    color: #fff;
+    background: #010214;
+    color: #fcfdff;
     margin: 0%;
 }
 
@@ -13,7 +13,7 @@
     align-items: center;
     height: 60vh;
     /* background: #23242a; */
-    background: black;
+    background: #010214;
 
 }
 
