--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -4,7 +4,7 @@
   margin: 0%;
   height: 80vh;
   /* background: #23242a; */
-  background: black;
+  background: #010214;
 }
 
 .box{
@@ -21,7 +21,7 @@
   }
 
 .titleAbout{
-  color: #fff;
+  color: #fcfdff;
 }
 
 .box .layer1{
@@ -35,7 +35,7 @@
   box-sizing: border-box;
   transition: 0.5s;
   /* background: #262626; */
-  background: #23242a;
+  background: #03051a;
   z-index: 3;
   overflow: hidden;
 }
@@ -54,8 +54,8 @@
   left:-110%;
   width: 100%;
   height: 100%;
-  /* background: rgba(255, 255, 255, .1); */
-  background:rgba(0, 0, 0, 0.1);
+  background: rgba(74, 74, 100, 0.315);
+  /* background:rgba(0, 0, 0, 0.1); */
   pointer-events: none;
   transition: 0.5s;
   transform: skewX(-5deg);
@@ -74,7 +74,8 @@
   border: 0.0625rem solid #fff;
   box-sizing: border-box;
   transition: 0.5s;
-  background: #262626;
+  /* background: #262626; */
+  background: #131426;
   z-index: 2;
 }
 
@@ -94,6 +95,7 @@
   box-sizing: border-box;
   transition: 0.5s;
   background: #262626;
+  /* background: #03051a; */
   z-index: 1;
   box-shadow: 0 1.25rem 3.125rem rgba(0, 0, 0, 1);
 }
