--- a/src/Name.css
+++ b/src/Name.css
@@ -1,7 +1,7 @@
 .banner{
     margin: 0%;
     height: 100vh;
-    background: #000;
+    background: #000001;
     justify-content: center;
     display: flex;
     align-items: start;
@@ -45,7 +45,7 @@ video{
     text-align: center;
     justify-content: center;
     align-items: center;
-    color:#fff;
+    color:#fcfdff;
     font-size: 4em;
     flex-wrap: wrap; 
     flex-direction: column;
@@ -61,7 +61,7 @@ video{
     text-align: center;
     justify-content: center;
     align-items: center;
-    color: #ddd;
+    color: #fcfdff;
     font-size: 2em;
 
     flex-wrap: wrap; 
