--- a/src/contact.css
+++ b/src/contact.css
@@ -1,14 +1,14 @@
 .contact{
     margin: 0%;
-    background: black;
+    background: #010214;
 }
 
 .headerText h2{
-    color: #fff;
+    color: #fcfdff;
 }
 
 .headerText p{
-    color: #fff;
+    color: #fcfdff;
 }
 
 .form-group label{
