--- a/src/Projects.css
+++ b/src/Projects.css
@@ -34,7 +34,7 @@
 }
 
 .slidPro ul li:nth-child(1){
-  background: url(./imagen/cipher.jpg);
+  background: url(./imagen/Safe-Word1.png);
   background-size: cover;
   background-position: left;
 }
@@ -46,7 +46,7 @@
 }
 
 .slidPro ul li:nth-child(3){
-  background: url(./imagen/pokemon-go.jpg);
+  background: url(./imagen/pocketmon.png);
   background-size: cover;
   background-position: left;
 }
