Footer is complete with links and desing

--- a/src/footer.css
+++ b/src/footer.css
@@ -1,3 +1,14 @@
 .desigFooter{
     background: #010214;
+    height: 10vh;
+    align-items: center;
 }
+
+.linkeIn{
+    float: left;
+}
+
+.github{
+    float: right;
+}
+
