--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,3 +1,7 @@
+.projects{
+  margin-bottom: 5%;
+}
+
 .slidPro h2{
   color: #fcfdff;
 }
@@ -87,4 +91,15 @@
   transition: 0.5s;
   transition-delay: 0.5s;
   opacity: 1;
+}
+
+.pSaveword{
+  padding: 2%;
+  padding-left: 5%;
+}
+
+@media (max-width: 485px){
+  .content p {
+    font-size: 1em
+  }
 }
