--- a/src/cv.css
+++ b/src/cv.css
@@ -23,17 +23,17 @@
     height: 15.625rem;
     border-radius: 50%;
     background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
-    /* animation: animate 0.5s linear infinite; */
+    animation: animatet 120s linear infinite;
 }
 
-/* @keyframes animate{
+@keyframes animatet{
     0%{
         transform: rotate(0deg);
     }
     100%{
         transform: rotate(360deg);
     }
-} */
+}
 
 .loader span{
     position: absolute;
